--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -9,6 +9,19 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <!-- OG Tags -->
+    <meta property="og:title" content="Yooshi Restaurant Web App" />
+    <meta
+      property="og:description"
+      content="An ode to my favorite food - Sushi!"
+    />
+    <meta property="og:type" content="link to web app" />
+    <meta property="og:url" content="https://www.leodeleon.co/yooshi" />
+    <meta
+      property="og:image"
+      content="https://www.leodeleon.co/yooshi/yooshi-avatar.jpg"
+    />
+    <title>Yooshi Japanese Cuisince 🥢</title>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!-- GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -31,7 +44,6 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
