--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -9,6 +9,20 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-1EHDCE079V"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-1EHDCE079V");
+    </script>
     <!-- OG Tags -->
     <meta property="og:title" content="Yooshi Restaurant Web App" />
     <meta
